--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,15 @@
 
     <ul class="language">
         <li>
-            <a [class.color]="currentLanguage === 'german'" (click)="language('german')">de</a>
+            <a [class.color]="currentLanguage === 'german'" (click)="language('german')">deutsch</a>
         </li>
         <li>|</li>
         <li>
-            <a [class.color]="currentLanguage === 'english'" (click)="language('english')">en</a>
+            <a [class.color]="currentLanguage === 'english'" (click)="language('english')">english</a>
         </li>
         <li>|</li>
         <li>
-            <a [class.color]="currentLanguage === 'romanian'" (click)="language('romanian')">ro</a>
+            <a [class.color]="currentLanguage === 'romanian'" (click)="language('romanian')">romana</a>
         </li>
 
     </ul>
