--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,15 @@
 
     <ul class="language">
         <li>
-            <a [class.color]="currentLanguage === 'german'" (click)="language('german')">deutsch</a>
+            <a [class.color]="currentLanguage === 'german'" (click)="language('german')">deut</a>
         </li>
         <li>|</li>
         <li>
-            <a [class.color]="currentLanguage === 'english'" (click)="language('english')">english</a>
+            <a [class.color]="currentLanguage === 'english'" (click)="language('english')">engl</a>
         </li>
         <li>|</li>
         <li>
-            <a [class.color]="currentLanguage === 'romanian'" (click)="language('romanian')">romana</a>
+            <a [class.color]="currentLanguage === 'romanian'" (click)="language('romanian')">rom</a>
         </li>
 
     </ul>
