--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -10,30 +10,40 @@
 }
 
 .description {
-    padding-right: 14px;
+    margin-right: 50px;
 }
 
 .author {
     display: flex;
     flex-direction: row;
-    margin: 0;
-    width: 420px;
+    justify-content: space-between;
+    margin-right: 50px;
+}
+
+.about {
+    display: flex;
+    flex-direction: row;
+}
+
+.paragraph {
+    margin-right: 20px;
 }
 
 img {
+    margin-top: 24px;
     width: 200px;
 }
 
 .head h1 {
-    font-size: 26px;
+    font-size: 28px;
 }
 
 .head p {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 section {
-    scroll-margin-top: 60px;
+    scroll-margin-top: 160px;
 }
 
 .title {
@@ -47,7 +57,7 @@ section {
 }
 
 .line {
-    margin-left: 30px;
+    margin-left: 46px;
     font-size: 22px;
 }
 
@@ -55,7 +65,7 @@ hr {
     color: rgb(201, 201, 201);
 }
 
-@media (max-width: 811px) {
+@media (max-width: 830px) {
     .head {
         display: flex;
         flex-direction: column;        
@@ -63,5 +73,26 @@ hr {
 
     .author {
         margin-top: 50px;
+    }
+
+    .about {
+        display: flex;
+        flex-direction: column;
+    }
+
+    section {
+        scroll-margin-top: 190px;
+    }
+}
+
+@media (max-width: 550px) {
+
+    .author {
+        margin-top: 30px;
+        flex-direction: column;
+    }    
+
+    section {
+        scroll-margin-top: 230px;
     }
 }
