--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,116 +1,123 @@
-<header (childMessageEvent)="receiveEvent($event)"></header>
+<navbar (childMessageEvent)="receiveEvent($event)"></navbar>
 
 <div class="content">
     <section id="section0">
-        <br><br><br><br><br><br>
         <div class="head">
             <div class="description">
-                <h1><strong>{{language.titleA}}</strong></h1>
-                <p>{{language.lineA}}</p>
-                <p>{{language.lineB}}</p>
+                <h1><strong>{{language.tA}}</strong></h1>
+                <p style="text-indent :1em;">{{language.tA_h1}}</p>
+                <p style="text-indent :1em;">{{language.tA_h2}}</p>
             </div>
             <div class="author">
                 <div>
-                    <h1><strong>{{language.titleB}}</strong></h1>
-                    <p>{{language.lineC}}</p>
-                    <p>{{language.lineD}}</p>
-                </div>
-                <div>
-                    <img src="assets/images/img.jpg" alt="image">
+                    <h1><strong>{{language.tB}}</strong></h1>
+                    <p style="text-indent :1em;">{{language.tB_h1}}</p>
+                    <p style="text-indent :1em;">{{language.tB_h2}}</p>
                 </div>
             </div>
         </div>
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 
     <section id="section1">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title1}}</strong></h1>
-        <br><br>
-        <p class="paragraph">{{language.paragraph11}}</p>
-        <p class="line">{{language.line11}}</p>
-        <p class="line">{{language.line12}}</p>
-        <p class="line">{{language.line13}}</p>
-        <p class="line">{{language.line14}}</p>
-        <p class="line">{{language.line15}}</p>
-        <p class="line">{{language.line16}}</p>
+        <h1 class="title"><strong>{{language.t1}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;">{{language.t1_h1}}</p>
+        <p class="line">{{language.t1_h1_p1}}</p>
+        <p class="line">{{language.t1_h1_p2}}</p>
+        <p class="line">{{language.t1_h1_p3}}</p>
+        <p class="line">{{language.t1_h1_p4}}</p>
+        <p class="line">{{language.t1_h1_p5}}</p>
+        <p class="line">{{language.t1_h1_p6}}</p>
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 
     <section id="section2">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title2}}</strong></h1>
-        <br><br>
-        <p class="paragraph">{{language.paragraph21}}</p>
-        <p class="line">{{language.line21}}</p>
-        <p class="line">{{language.line22}}</p>
-        <p class="line">{{language.line23}}</p>
-        <p class="line">{{language.line24}}</p>
-        <p class="line">{{language.line25}}</p>
+        <h1 class="title"><strong>{{language.t2}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;">{{language.t2_h1}}</p>
+        <p class="line">{{language.t2_h1_p1}}</p>
+        <p class="line">{{language.t2_h1_p2}}</p>
+        <p class="line">{{language.t2_h1_p3}}</p>
+        <p class="line">{{language.t2_h1_p4}}</p>
+        <p class="line">{{language.t2_h1_p5}}</p>
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 
     <section id="section3">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title3}}</strong></h1>
-        <br><br>
-        <p class="paragraph">{{language.paragraph31}}</p>
-        <p class="line">{{language.line31}}</p>
-        <p class="line">{{language.line32}}</p>
-        <p class="line">{{language.line33}}</p>
-        <p class="line">{{language.line34}}</p>
+        <h1 class="title"><strong>{{language.t3}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;">{{language.t3_h1}}</p>
+        <p class="line">{{language.t3_h1_p1}}</p>
+        <p class="line">{{language.t3_h1_p2}}</p>
+        <p class="line">{{language.t3_h1_p3}}</p>
+        <p class="line">{{language.t3_h1_p4}}</p>
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 
     <section id="section4">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title4}}</strong></h1>
-        <br><br>
-        <p class="paragraph">{{language.paragraph41}}</p>
-        <p class="line">{{language.line41}}</p>
-        <p class="line">{{language.line42}}</p>
-        <p class="line">{{language.line43}}</p>
-        <p class="paragraph">{{language.paragraph42}}</p>
-        <p class="paragraph">{{language.paragraph43}}</p>
+        <h1 class="title"><strong>{{language.t4}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;">{{language.t4_h1}}</p>
+        <p class="line" style="text-indent :1em;">{{language.t4_h1_p1}}</p>
+        <p class="line" style="text-indent :1em;">{{language.t4_h1_p2}}</p>
+        <p class="line" style="text-indent :1em;">{{language.t4_h1_p3}}</p>        
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 
     <section id="section5">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title5}}</strong></h1>
-        <br><br>
-        <p class="paragraph">{{language.paragraph51}}</p>
+        <h1 class="title"><strong>{{language.t5}}</strong></h1>
+        <br>
+
+        <div class="about">
+            <div>
+                <p class="paragraph" style="text-indent :2em;">{{language.t5_h1}}</p>
+            </div>
+            <div>
+                <img src="assets/images/img.jpg" alt="image">
+            </div>
+        </div>
     </section>
-    <br><br>
+    <br>
     <hr>
     <br><br><br><br><br>
 
 
     <section id="section6">
-        <br><br><br><br><br><br>
-        <h1 class="title"><strong>{{language.title6}}</strong></h1>
-        <br><br>
-        <p class="paragraph"><b>{{language.line61}}</b>{{language.line62}}</p>
-        <p class="paragraph"><b>{{language.line63}}</b>{{language.line64}}</p>
-        <p class="paragraph"><b>{{language.line65}}</b>{{language.line66}}</p>
+        <h1 class="title"><strong>{{language.t6}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;">{{language.t6_h1}}</p>
+        <p class="paragraph" style="text-indent :2em;">{{language.t6_h2}}</p>
     </section>
-    <br><br>
+    <br>
     <hr>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
+    <br><br><br><br>
+
+
+    <section id="section7">
+        <h1 class="title"><strong>{{language.t7}}</strong></h1>
+        <br>
+        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
+        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
+        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
+    </section>
+    <br>
+    <hr>
+    <br><br><br><br>
+    <br><br><br><br>
 </div>
