--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -88,7 +88,7 @@
             <div>
                 <p class="paragraph" style="text-indent :2em;">{{language.t5_h1}}</p>
             </div>
-            <div>
+            <div class="photo">
                 <img src="assets/images/img.jpg" alt="image">
             </div>
         </div>
