--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -5,14 +5,14 @@
         <div class="head">
             <div class="description">
                 <h1><strong>{{language.tA}}</strong></h1>
-                <p style="text-indent :1em;">{{language.tA_h1}}</p>
-                <p style="text-indent :1em;">{{language.tA_h2}}</p>
+                <p>{{language.tA_h1}}</p>
+                <p>{{language.tA_h2}}</p>
             </div>
             <div class="author">
                 <div>
                     <h1><strong>{{language.tB}}</strong></h1>
-                    <p style="text-indent :1em;">{{language.tB_h1}}</p>
-                    <p style="text-indent :1em;">{{language.tB_h2}}</p>
+                    <p>{{language.tB_h1}}</p>
+                    <p>{{language.tB_h2}}</p>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
     <section id="section1">
         <h1 class="title"><strong>{{language.t1}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;">{{language.t1_h1}}</p>
+        <p class="paragraph">{{language.t1_h1}}</p>
         <p class="line">{{language.t1_h1_p1}}</p>
         <p class="line">{{language.t1_h1_p2}}</p>
         <p class="line">{{language.t1_h1_p3}}</p>
@@ -41,7 +41,7 @@
     <section id="section2">
         <h1 class="title"><strong>{{language.t2}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;">{{language.t2_h1}}</p>
+        <p class="paragraph">{{language.t2_h1}}</p>
         <p class="line">{{language.t2_h1_p1}}</p>
         <p class="line">{{language.t2_h1_p2}}</p>
         <p class="line">{{language.t2_h1_p3}}</p>
@@ -56,7 +56,7 @@
     <section id="section3">
         <h1 class="title"><strong>{{language.t3}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;">{{language.t3_h1}}</p>
+        <p class="paragraph">{{language.t3_h1}}</p>
         <p class="line">{{language.t3_h1_p1}}</p>
         <p class="line">{{language.t3_h1_p2}}</p>
         <p class="line">{{language.t3_h1_p3}}</p>
@@ -70,10 +70,10 @@
     <section id="section4">
         <h1 class="title"><strong>{{language.t4}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;">{{language.t4_h1}}</p>
-        <p class="line" style="text-indent :1em;">{{language.t4_h1_p1}}</p>
-        <p class="line" style="text-indent :1em;">{{language.t4_h1_p2}}</p>
-        <p class="line" style="text-indent :1em;">{{language.t4_h1_p3}}</p>        
+        <p class="paragraph">{{language.t4_h1}}</p>
+        <p class="line">{{language.t4_h1_p1}}</p>
+        <p class="line">{{language.t4_h1_p2}}</p>
+        <p class="line">{{language.t4_h1_p3}}</p>        
     </section>
     <br>
     <hr>
@@ -86,7 +86,7 @@
 
         <div class="about">
             <div>
-                <p class="paragraph" style="text-indent :2em;">{{language.t5_h1}}</p>
+                <p class="paragraph">{{language.t5_h1}}</p>
             </div>
             <div class="photo">
                 <img src="assets/images/img.jpg" alt="image">
@@ -101,8 +101,8 @@
     <section id="section6">
         <h1 class="title"><strong>{{language.t6}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;">{{language.t6_h1}}</p>
-        <p class="paragraph" style="text-indent :2em;">{{language.t6_h2}}</p>
+        <p class="paragraph">{{language.t6_h1}}</p>
+        <p class="paragraph">{{language.t6_h2}}</p>
     </section>
     <br>
     <hr>
@@ -112,9 +112,9 @@
     <section id="section7">
         <h1 class="title"><strong>{{language.t7}}</strong></h1>
         <br>
-        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
-        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
-        <p class="paragraph" style="text-indent :2em;"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
+        <p class="paragraph"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
+        <p class="paragraph"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
+        <p class="paragraph"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
     </section>
     <br>
     <hr>
