--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 <navbar (childMessageEvent)="receiveEvent($event)"></navbar>
 
-<div class="content">
+<div class="container">
     <section id="section0">
         <div class="head">
             <div class="description">
@@ -85,7 +85,7 @@
         <br>
 
         <div class="about">
-            <div>
+            <div class="describe">
                 <p class="paragraph">{{language.t5_h1}}</p>
             </div>
             <div class="photo">
