--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <li class="pipeUp">|</li>
             <li class="burger">
                 <label for="check" class="checkbtn" (click)="wideMenu()">
-                    {{wide ? "🗙": "☰" }}
+                    <strong>{{wide ? "🗙": "☰" }}</strong>
                 </label>
             </li>
         </ul>
