--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -13,6 +13,8 @@
 .burger {
   display: none;
   margin-right: 18px;
+  padding-top: 0;
+  font-size: 20px;
 }
 
 input {
@@ -52,7 +54,6 @@ ul {
 
 li {
   padding: 4px;
-
 }
 
 a {
@@ -61,9 +62,7 @@ a {
   color: rgb(113, 113, 113);
 }
 
-@media (max-width: 830px) {}
-
-@media (max-width: 550px) {
+@media (max-width: 830px) {
   .container {
     border-bottom: none;
   }
@@ -74,8 +73,7 @@ a {
   }
 
   .language ul {
-    font-size: 15px;
-    padding: 6px;
+    padding: 4px;
     width: 100%;
     position: absolute;
     z-index: 2;
