--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -101,8 +101,8 @@
     <section id="section6">
         <h1 class="title"><strong>{{language.t6}}</strong></h1>
         <br>
-        <p class="paragraph">{{language.t6_h1}}</p>
-        <p class="paragraph">{{language.t6_h2}}</p>
+        <p class="line">{{language.t6_h1}}</p>
+        <p class="line">{{language.t6_h2}}</p>
     </section>
     <br>
     <hr>
@@ -112,9 +112,9 @@
     <section id="section7">
         <h1 class="title"><strong>{{language.t7}}</strong></h1>
         <br>
-        <p class="paragraph"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
-        <p class="paragraph"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
-        <p class="paragraph"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
+        <p class="line"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
+        <p class="line"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
+        <p class="line"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
     </section>
     <br>
     <hr>
