--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -5,14 +5,18 @@
         <div class="head">
             <div class="description">
                 <h1><strong>{{language.tA}}</strong></h1>
-                <p>{{language.tA_h1}}</p>
-                <p>{{language.tA_h2}}</p>
+                <ul>
+                    <li>{{language.tA_h1}}</li>
+                    <li>{{language.tA_h2}}</li>
+                </ul>
             </div>
             <div class="author">
                 <div>
                     <h1><strong>{{language.tB}}</strong></h1>
-                    <p>{{language.tB_h1}}</p>
-                    <p>{{language.tB_h2}}</p>
+                    <ul>
+                        <li>{{language.tB_h1}}</li>
+                        <li>{{language.tB_h2}}</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -26,12 +30,14 @@
         <h1 class="title"><strong>{{language.t1}}</strong></h1>
         <br>
         <p class="paragraph">{{language.t1_h1}}</p>
-        <p class="line">{{language.t1_h1_p1}}</p>
-        <p class="line">{{language.t1_h1_p2}}</p>
-        <p class="line">{{language.t1_h1_p3}}</p>
-        <p class="line">{{language.t1_h1_p4}}</p>
-        <p class="line">{{language.t1_h1_p5}}</p>
-        <p class="line">{{language.t1_h1_p6}}</p>
+        <ul>
+            <li>{{language.t1_h1_p1}}</li>
+            <li>{{language.t1_h1_p2}}</li>
+            <li>{{language.t1_h1_p3}}</li>
+            <li>{{language.t1_h1_p4}}</li>
+            <li>{{language.t1_h1_p5}}</li>
+            <li>{{language.t1_h1_p6}}</li>
+        </ul>
     </section>
     <br>
     <hr>
@@ -42,11 +48,13 @@
         <h1 class="title"><strong>{{language.t2}}</strong></h1>
         <br>
         <p class="paragraph">{{language.t2_h1}}</p>
-        <p class="line">{{language.t2_h1_p1}}</p>
-        <p class="line">{{language.t2_h1_p2}}</p>
-        <p class="line">{{language.t2_h1_p3}}</p>
-        <p class="line">{{language.t2_h1_p4}}</p>
-        <p class="line">{{language.t2_h1_p5}}</p>
+        <ul>
+            <li>{{language.t2_h1_p1}}</li>
+            <li>{{language.t2_h1_p2}}</li>
+            <li>{{language.t2_h1_p3}}</li>
+            <li>{{language.t2_h1_p4}}</li>
+            <li>{{language.t2_h1_p5}}</li>
+        </ul>
     </section>
     <br>
     <hr>
@@ -57,10 +65,12 @@
         <h1 class="title"><strong>{{language.t3}}</strong></h1>
         <br>
         <p class="paragraph">{{language.t3_h1}}</p>
-        <p class="line">{{language.t3_h1_p1}}</p>
-        <p class="line">{{language.t3_h1_p2}}</p>
-        <p class="line">{{language.t3_h1_p3}}</p>
-        <p class="line">{{language.t3_h1_p4}}</p>
+        <ul>
+            <li>{{language.t3_h1_p1}}</li>
+            <li>{{language.t3_h1_p2}}</li>
+            <li>{{language.t3_h1_p3}}</li>
+            <li>{{language.t3_h1_p4}}</li>
+        </ul>
     </section>
     <br>
     <hr>
@@ -71,9 +81,11 @@
         <h1 class="title"><strong>{{language.t4}}</strong></h1>
         <br>
         <p class="paragraph">{{language.t4_h1}}</p>
-        <p class="line">{{language.t4_h1_p1}}</p>
-        <p class="line">{{language.t4_h1_p2}}</p>
-        <p class="line">{{language.t4_h1_p3}}</p>        
+        <ul>
+            <li>{{language.t4_h1_p1}}</li>
+            <li>{{language.t4_h1_p2}}</li>
+            <li>{{language.t4_h1_p3}}</li>
+        </ul>
     </section>
     <br>
     <hr>
@@ -101,8 +113,10 @@
     <section id="section6">
         <h1 class="title"><strong>{{language.t6}}</strong></h1>
         <br>
-        <p class="line">{{language.t6_h1}}</p>
-        <p class="line">{{language.t6_h2}}</p>
+        <ul>
+            <li>{{language.t6_h1}}</li>
+            <li>{{language.t6_h2}}</li>
+        </ul>
     </section>
     <br>
     <hr>
@@ -112,9 +126,11 @@
     <section id="section7">
         <h1 class="title"><strong>{{language.t7}}</strong></h1>
         <br>
-        <p class="line"><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</p>
-        <p class="line"><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</p>
-        <p class="line"><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</p>
+        <ul>
+            <li><b>{{language.t7_h1}}</b>{{language.t7_h1_p1}}</li>
+            <li><b>{{language.t7_h2}}</b>{{language.t7_h2_p1}}</li>
+            <li><b>{{language.t7_h3}}</b>{{language.t7_h3_p1}}</li>
+        </ul>
     </section>
     <br>
     <hr>
