--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <li class="pipeUp">|</li>
             <li class="burger">
                 <label for="check" class="checkbtn" (click)="wideMenu()">
-                    <strong>{{wide ? "&#128473;": "&#9776;" }}</strong>
+                    <mat-icon>{{wide ? "close": "menu" }}</mat-icon>
                 </label>
             </li>
         </ul>
